--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.8.0",
     "graphql": "^16.0.0",
-    "graphql-request": "^6.0.0"
+    "graphql-request": "^6.0.0",
+    "express": "3.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
